# promptxml

./: CONTRIBUTION.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
promptxml/: item.py  section.py
tests/: test_item.py  test_section.py
